@@ -1,3 +1,8 @@
+2016-11-28  Pedro Alves  <pedro@palves.net>
+
+	* e-src/GdbServer.cpp (GdbServer::rspAttach)
+	(GdbServer::rspSetThread): Remove unused locals.
+
 2016-10-27  Pedro Alves  <pedro@palves.net>
 
 	* src/GdbServer.h (GdbServer::vContTidAction::matches): Add
